# NCHASH

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  benchmark_plots.ipynb  pyproject.toml  requirements.txt  tests.ipynb
docs/: README.md  api.md  conf.py  index.rst  requirements.txt  usage.md
nchash/: __init__.py  cli.py  core.py  driver.py  io.py  uncertainty.py  utils.py  velocity.py
